# ARQUITECTURAPROMPTMODELS

./: README.md  __init__.py  architectural_nodes.py  nodes.py  pyproject.toml
comfyui-floorplan-camera/: __init__.py
comfyui-floorplan-camera-v1.2/: README.md  pyproject.toml
comfyui-floorplan-camera-v1.2/js/: floorplan_camera.js
comfyui-floorplan-camera-v1.2/workflows/: 02_with_gemini_vlm.json
js/: floorplan_camera.js
workflows/: 01_deterministic_full.json  floorplan_camera_basic.json  floorplan_camera_with_materials.json
