[project]
name = "comfyui-floorplan-camera"
description = "Interactive 2D camera placement on architectural floor plans with prompt generation for ComfyUI. Includes lens, lighting, negative prompt, and shot preset nodes."
version = "1.2.0"
license = "MIT"

[project.urls]
Repository = "https://github.com/cdanielp/ARQUITECTURAPROMPTMODELS"

[tool.comfy]
PublisherId = "prompt-models-studio"
DisplayName = "FloorPlan Camera — Architecture Suite"
Icon = "📐"
